--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 .mtj.tmp/
 # Package Files #
 *.jar
+!lib
 *.war
 *.ear
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
