--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,8 @@
         <fileset dir="${lib.dir}" includes="**/*.jar"/>
     </path>
 
+    <path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
+
     <target name="clean">
         <delete dir="${build.dir}"/>
     </target>
@@ -36,9 +38,21 @@
         <java fork="true" classname="${main-class}">
             <classpath>
                 <path refid="classpath"/>
-                <path location="${jar.dir}/${ant.project.name}.jar"/>
+                <path refid="application"/>
             </classpath>
         </java>
+    </target>
+
+    <target name="junit" depends="jar">
+        <junit printsummary="yes">
+            <classpath>
+                <path refid="classpath"/>
+                <path refid="application"/>
+            </classpath>
+            <batchtest fork="yes">
+                <fileset dir="${src.dir}" includes="*Test.java"/>
+            </batchtest>
+        </junit>
     </target>
 
     <target name="clean-build" depends="clean,jar"/>
