--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .mtj.tmp/
 # Package Files #
 #*.jar
-#/build
+/build
 *.war
 *.ear
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
